--- a/src/FizzBuzz.Web/FizzBuzz.Web.csproj
+++ b/src/FizzBuzz.Web/FizzBuzz.Web.csproj
@@ -11,4 +11,8 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\FizzBuzz.Core\FizzBuzz.Core.csproj" />
+    </ItemGroup>
+
 </Project>
